# dovo

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  boost.patch  build-osx.sh  build.bat  build.sh  zlib.patch
.github/workflows/: windows.yaml
adm/: dovo.adm  dovo.adml  dovo.admx
installers/deb/: build.sh  control  control.in  dovo.desktop
installers/deb/DEBIAN/: control
installers/dmg/: build.sh
installers/wix/: Product.wxs  Product.wxs.in  WIX.template.in  dovo.sln  dovo.wixproj  license.rtf
jasper/: CMakeLists.txt
snap/: snapcraft.yaml
sqlite3/: sqlite3_exec_stmt.c  sqlite3_exec_stmt.h
src/: alphanum.hpp  dcm2img.cpp  dcm2img.h  destinationentry.h  dicomscanner.cpp  dicomscanner.h  dicomsender.cpp  dicomsender.h  dovo_about.cpp  dovo_about.h  dovo_changePatientInfo.cpp  dovo_changePatientInfo.h  dovo_destination.cpp  dovo_destination.h  dovo_mainFrame.cpp  dovo_mainFrame.h  dovo_searchStatus.cpp  dovo_searchStatus.h  dovo_sendStatus.cpp  dovo_sendStatus.h  dovo_updateCheck.cpp  dovo_updateCheck.h  engine.cpp  engine.h  fetch.cpp  fetch.h  gui.cpp  gui.h  main.cpp  patientdata.cpp  patientdata.h  update.cpp  update.h
src/gui/: gui.fbp
src/osx/: Info.plist  Info.plist.in  dovo.icns
src/win/: dovo.manifest  dovo.rc  version.rc
wix/: Product.wxs  dovo.sln
